--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bulma": "^0.9.4",
     "dotenv": "^16.3.1",
     "express-fileupload": "^1.4.3",
+    "history": "^5.3.0",
     "i18next": "^19.9.2",
     "i18next-browser-languagedetector": "^6.1.8",
     "i18next-xhr-backend": "^3.2.2",
