--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_API_KEY =kunci-api-Anda 
 # REACT_APP_API_URL =https://tiny-teal-moose-vest.cyclic.app
 REACT_APP_API_URL =http://localhost:5000
-PUBLIC_URL=http://localhost:3000/labfis
+PUBLIC_URL=/labfis
