--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "/labfis",
+  "homepage": "http://localhost:3000/labfis",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
